force-app/main/default/objects/site_config__c/site_config__c.object-meta.xml
<CustomObject>
    <label>Site Config</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>