force-app/main/default/objects/site_config__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>campaign</label>
    <referenceTo>campaign__c</referenceTo>
    <relationshipLabel>Site Config</relationshipLabel>
    <relationshipName>Site_Config</relationshipName>
    <type>Lookup</type>
</CustomField>