force-app/main/default/objects/site_config__c/fields/campaign_category__c.field-meta.xml
<CustomField>
    <fullName>campaign_category__c</fullName>
    <label>campaign category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>