force-app/main/default/objects/site_config__c/fields/destination_cache__c.field-meta.xml
<CustomField>
    <fullName>destination_cache__c</fullName>
    <label>destination cache</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>