force-app/main/default/objects/site_config__c/fields/hero_image_url__c.field-meta.xml
<CustomField>
    <fullName>hero_image_url__c</fullName>
    <label>hero image url</label>
    <type>Url</type>
</CustomField>