force-app/main/default/objects/site_config__c/fields/hero_text__c.field-meta.xml
<CustomField>
    <fullName>hero_text__c</fullName>
    <label>hero text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>