force-app/main/default/objects/site_config__c/fields/hero_video_extra_url__c.field-meta.xml
<CustomField>
    <fullName>hero_video_extra_url__c</fullName>
    <label>hero video extra url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>