force-app/main/default/objects/site_config__c/fields/hero_video_url__c.field-meta.xml
<CustomField>
    <fullName>hero_video_url__c</fullName>
    <label>hero video url</label>
    <type>Url</type>
</CustomField>