force-app/main/default/objects/site_config__c/fields/landing_inner_image_url__c.field-meta.xml
<CustomField>
    <fullName>landing_inner_image_url__c</fullName>
    <label>landing inner image url</label>
    <type>Url</type>
</CustomField>