force-app/main/default/objects/site_config__c/fields/linkto_text__c.field-meta.xml
<CustomField>
    <fullName>linkto_text__c</fullName>
    <label>linkto text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>