force-app/main/default/objects/site_config__c/fields/linkto_url__c.field-meta.xml
<CustomField>
    <fullName>linkto_url__c</fullName>
    <label>linkto url</label>
    <type>Url</type>
</CustomField>