force-app/main/default/objects/site_config__c/fields/Mobile_Hero_Image__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Hero_Image__c</fullName>
    <label>Mobile Hero Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>