force-app/main/default/objects/site_config__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>disabled</fullName>
                <default>true</default>
                <label>disabled</label>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>