force-app/main/default/objects/site_config__c/listViews/Active_Video.listView-meta.xml
<ListView>
    <fullName>Active_Video</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>site__c</columns>
    <columns>status__c</columns>
    <columns>type__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>hero_image_url__c</columns>
    <columns>landing_inner_image_url__c</columns>
    <columns>hero_video_url__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>enabled</value>
    </filters>
    <filters>
        <field>hero_video_url__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Active Video</label>
</ListView>