force-app/main/default/objects/site_config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>status__c</columns>
    <columns>Name__c</columns>
    <columns>Mobile_Hero_Image__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>