force-app/main/default/objects/site_config__c/listViews/Category_Pages.listView-meta.xml
<ListView>
    <fullName>Category_Pages</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>type__c</columns>
    <columns>Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>stay,travel,cruise</value>
    </filters>
    <label>Category Pages</label>
</ListView>