force-app/main/default/objects/site_config__c/listViews/Competitions.listView-meta.xml
<ListView>
    <fullName>Competitions</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>Name__c</columns>
    <columns>campaign__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>competition</value>
    </filters>
    <label>Competitions</label>
</ListView>