force-app/main/default/objects/site_config__c/listViews/Home_Heros_Archive.listView-meta.xml
<ListView>
    <fullName>Home_Heros_Archive</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>Name__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>home hero</value>
    </filters>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>disabled</value>
    </filters>
    <label>Home Heros (Archive)</label>
</ListView>